--- a/site-publish/get-involved.html
+++ b/site-publish/get-involved.html
@@ -29,7 +29,7 @@
 </table>
 <div class="searchbox noPrint">
 <form method="get" action="http://www.google.com/search">
-<input type="hidden" name="sitesearch" value="incubator.apache.org/pivot" />
+<input type="hidden" name="as_oq" value="site:cwiki.apache.org/pivot site:incubator.apache.org/pivot" />
 <input type="text" id="query" name="q" size="25" value="Search the Site" />
 <input type="submit" value="Search Site" name="Search" />
 </form>
