--- a/site-publish/lists.html
+++ b/site-publish/lists.html
@@ -20,9 +20,9 @@
 </font>
 </td>
 <td>
-<!--APACHE LOGO-->
-<a href="http://www.apache.org/">
-<img border="0" alt="Apache Logo" align="right" src="http://www.apache.org/images/asf-logo.gif" />
+<!--APACHE INCUBATOR LOGO-->
+<a href="http://incubator.apache.org/">
+<img border="0" alt="Apache Incubator Logo" align="right" src="http://incubator.apache.org/images/apache-incubator-logo.png" />
 </a>
 </td>
 </tr>
