Added incubator disclaimer to the legal.html page

--- a/site-publish/legal.html
+++ b/site-publish/legal.html
@@ -149,10 +149,21 @@
 <blockquote>
 
       <p>
-        All software produced by The Apache Software Foundation or any of its
-        projects or subjects is licensed according to the terms of
+        All software produced by The Apache Software Foundation (ASF) or any of
+        its projects or subjects is licensed according to the terms of
         <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License,
         Version 2.0 (current)</a>.
+      </p>
+
+      <p>
+        Apache Pivot is an effort undergoing incubation at The ASF, sponsored
+        by the Apache Incubator Project Management Committee (PMC). Incubation
+        is required of all newly accepted projects until a further review
+        indicates that the infrastructure, communications, and decision making
+        process have stabilized in a manner consistent with other successful
+        ASF projects. While incubation status is not necessarily a reflection
+        of the completeness or stability of the code, it does indicate that
+        the project has yet to be fully endorsed by the ASF.
       </p>
 
     </blockquote>
