Added Google Analytics code to site

--- a/site-publish/get-involved.html
+++ b/site-publish/get-involved.html
@@ -5,6 +5,16 @@
 <title>Apache Pivot - Apache Pivot -- Get Involved</title>
 <link rel="stylesheet" href="css/pivot.css" type="text/css" />
 <link media="print" rel="stylesheet" href="css/pivot-printer.css" type="text/css" />
+<script type="text/javascript">
+          var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+          document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+<script type="text/javascript">
+          try {
+            var pageTracker = _gat._getTracker("UA-7977275-1");
+            pageTracker._trackPageview();
+          } catch(err) {}
+        </script>
 </head>
 <body vlink="#525D76" alink="#525D76" link="#525D76" text="#000000" bgcolor="#ffffff">
 <table cellspacing="0" width="100%" border="0">
