--- a/site-publish/legal.html
+++ b/site-publish/legal.html
@@ -5,6 +5,16 @@
 <title>Apache Pivot - Apache Pivot -- Legal Stuff They Make Us Say</title>
 <link rel="stylesheet" href="css/pivot.css" type="text/css" />
 <link media="print" rel="stylesheet" href="css/pivot-printer.css" type="text/css" />
+<script type="text/javascript">
+          var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+          document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+<script type="text/javascript">
+          try {
+            var pageTracker = _gat._getTracker("UA-7977275-1");
+            pageTracker._trackPageview();
+          } catch(err) {}
+        </script>
 </head>
 <body vlink="#525D76" alink="#525D76" link="#525D76" text="#000000" bgcolor="#ffffff">
 <table cellspacing="0" width="100%" border="0">
@@ -147,14 +157,36 @@
 <td>
 <p>
 <blockquote>
-
       <p>
         All software produced by The Apache Software Foundation (ASF) or any of
         its projects or subjects is licensed according to the terms of
         <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License,
         Version 2.0 (current)</a>.
       </p>
-
+    </blockquote>
+</p>
+</td>
+</tr>
+<tr>
+<td>
+<br />
+</td>
+</tr>
+</table>
+<table width="100%" cellpadding="2" cellspacing="0" border="0">
+<tr>
+<td bgcolor="#525D76">
+<font face="arial,helvetica,sanserif" color="#ffffff">
+<a name="Incubation">
+<strong>Incubation</strong>
+</a>
+</font>
+</td>
+</tr>
+<tr>
+<td>
+<p>
+<blockquote>
       <p>
         Apache Pivot is an effort undergoing incubation at The ASF, sponsored
         by the Apache Incubator Project Management Committee (PMC). Incubation
@@ -165,7 +197,6 @@
         of the completeness or stability of the code, it does indicate that
         the project has yet to be fully endorsed by the ASF.
       </p>
-
     </blockquote>
 </p>
 </td>
