--- a/site-publish/legal.html
+++ b/site-publish/legal.html
@@ -177,8 +177,8 @@
 <tr>
 <td bgcolor="#525D76">
 <font face="arial,helvetica,sanserif" color="#ffffff">
-<a name="Incubation">
-<strong>Incubation</strong>
+<a name="Incubation At Apache">
+<strong>Incubation At Apache</strong>
 </a>
 </font>
 </td>
@@ -187,16 +187,25 @@
 <td>
 <p>
 <blockquote>
+
       <p>
         Apache Pivot is an effort undergoing incubation at The ASF, sponsored
-        by the Apache Incubator Project Management Committee (PMC). Incubation
-        is required of all newly accepted projects until a further review
-        indicates that the infrastructure, communications, and decision making
-        process have stabilized in a manner consistent with other successful
-        ASF projects. While incubation status is not necessarily a reflection
-        of the completeness or stability of the code, it does indicate that
-        the project has yet to be fully endorsed by the ASF.
+        by the Apache Incubator Project Management Committee (PMC).
       </p>
+
+      <p>
+        Incubation is required of all newly accepted projects until a further
+        review indicates that the infrastructure, communications, and decision
+        making process have stabilized in a manner consistent with other
+        successful ASF projects.
+      </p>
+
+      <p>
+        While incubation status is not necessarily a reflection of the
+        completeness or stability of the code, it does indicate that the project
+        has yet to be fully endorsed by the ASF.
+      </p>
+
     </blockquote>
 </p>
 </td>
