Added download page to documentation site (not yet linked to), updated HTML titles on all pages

--- a/site-publish/svn.html
+++ b/site-publish/svn.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-<title>Apache Pivot - Apache Pivot -- Subversion Repository Access</title>
+<title>Apache Pivot - Subversion Repository Access</title>
 <link rel="stylesheet" href="css/pivot.css" type="text/css" />
 <link media="print" rel="stylesheet" href="css/pivot-printer.css" type="text/css" />
 <script type="text/javascript">
