--- a/site-publish/legal.html
+++ b/site-publish/legal.html
@@ -125,7 +125,7 @@
 </p>
 <ul>
 <li>
-<a href="http://code.google.com/p/pivot-demos/">Extra Demos</a>
+<a href="http://code.google.com/p/pivot-demos/">Additional Demos</a>
 </li>
 <li>
 <a href="http://code.google.com/p/pivot-jfree/">JFreeChart Provider</a>
