--- a/site-publish/who-we-are.html
+++ b/site-publish/who-we-are.html
@@ -252,6 +252,11 @@
 </p>
       
 
+      <p>
+<b>Noel Grandin</b> (noelgrandin at apache.org)<br />
+</p>
+      
+
     </blockquote>
 </p>
 </td>
