Added FAQ to site

--- a/site-publish/contact.html
+++ b/site-publish/contact.html
@@ -78,6 +78,9 @@
 </p>
 <ul>
 <li>
+<a href="http://cwiki.apache.org/PIVOT/frequently-asked-questions-faq.html">FAQ</a>
+</li>
+<li>
 <a href="http://cwiki.apache.org/PIVOT/tutorial.html">Tutorial</a>
 </li>
 <li>
@@ -142,7 +145,7 @@
 <a href="./contact.html">Contact</a>
 </li>
 <li>
-<a href="./legal.html">Legal</a>
+<a href="./legal.html">Legal / License</a>
 </li>
 <li>
 <a href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a>
