Added logo to project site

--- a/site-publish/contact.html
+++ b/site-publish/contact.html
@@ -17,17 +17,14 @@
         </script>
 </head>
 <body vlink="#525D76" alink="#525D76" link="#525D76" text="#000000" bgcolor="#ffffff">
-<table cellspacing="0" width="100%" border="0">
+<table cellspacing="0" width="95%" border="0" align="center">
 <!--PAGE HEADER-->
 <tr>
 <td>
 <!--PROJECT LOGO-->
-<a href="http://incubator.apache.org/pivot/" />
-</td>
-<td>
-<font face="arial,helvetica,sanserif">
-<h1>Apache Pivot</h1>
-</font>
+<a href="http://incubator.apache.org/pivot/">
+<img border="0" alt="Pivot Logo" align="left" src="./img/pivot.png" />
+</a>
 </td>
 <td>
 <!--APACHE INCUBATOR LOGO-->
