Updated lists page on the site

--- a/site-publish/lists.html
+++ b/site-publish/lists.html
@@ -248,8 +248,8 @@
         <tr>
           <td>Posting questions to the list:</td>
           <td>Send your question to <a href="mailto:pivot-user@incubator.apache.org">
-          pivot-user@incubator.apache.org</a>
-</td>
+          pivot-user@incubator.apache.org</a> (<strong>Replies are sent to the list, so you must
+          be subscribed to see the answer!</strong>)</td>
         </tr>
         <tr>
           <td>Getting help with the list:</td>
@@ -331,7 +331,7 @@
           <td>Subscription:</td>
           <td>Send a blank email to <a href="mailto:pivot-dev-subscribe@incubator.apache.org">
           pivot-dev-subscribe@incubator.apache.org</a>
-          (<strong>Not a user support list!</strong>)</td>
+</td>
         </tr>
         <tr>
           <td>Digest subscription:</td>
@@ -343,8 +343,8 @@
         <tr>
           <td>Posting questions to the list:</td>
           <td>Send your question to <a href="mailto:pivot-dev@incubator.apache.org">
-          pivot-dev@incubator.apache.org</a>
-</td>
+          pivot-dev@incubator.apache.org</a> (<strong>Replies are sent to the list, so you must
+          be subscribed to see the answer!</strong>)</td>
         </tr>
         <tr>
           <td>Getting help with the list:</td>
