--- a/site-publish/index.html
+++ b/site-publish/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <title>Apache Pivot - Home</title>
-<link rel="stylesheet" href="css/pivot.css" type="text/css" />
-<link media="print" rel="stylesheet" href="css/pivot-printer.css" type="text/css" />
+<link type="text/css" href="css/pivot.css" rel="stylesheet"/>
+<link type="text/css" href="css/pivot-printer.css" rel="stylesheet" media="print"/>
 <script type="text/javascript">
           var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
           document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -16,41 +16,41 @@
           } catch(err) {}
         </script>
 </head>
-<body vlink="#525D76" alink="#525D76" link="#525D76" text="#000000" bgcolor="#ffffff">
-<table cellspacing="0" width="95%" border="0" align="center">
+<body bgcolor="#ffffff" text="#000000" link="#525D76" alink="#525D76" vlink="#525D76">
+<table align="center" border="0" width="95%" cellspacing="0">
 <!--PAGE HEADER-->
 <tr>
 <td>
 <!--PROJECT LOGO-->
 <a href="http://incubator.apache.org/pivot/">
-<img border="0" alt="Pivot Logo" align="left" src="./img/pivot.png" />
+<img src="./img/pivot.png" align="left" alt="Pivot Logo" border="0"/>
 </a>
 </td>
 <td>
 <!--APACHE INCUBATOR LOGO-->
 <a href="http://incubator.apache.org/">
-<img border="0" alt="Apache Incubator Logo" align="right" src="http://incubator.apache.org/images/apache-incubator-logo.png" />
+<img src="http://incubator.apache.org/images/apache-incubator-logo.png" align="right" alt="Apache Incubator Logo" border="0"/>
 </a>
 </td>
 </tr>
 </table>
 <div class="searchbox noPrint">
-<form method="get" action="http://www.google.com/search">
-<input type="hidden" name="as_oq" value="site:cwiki.apache.org/pivot site:incubator.apache.org/pivot" />
-<input type="text" id="query" name="q" size="25" value="Search the Site" />
-<input type="submit" value="Search Site" name="Search" />
+<form action="http://www.google.com/search" method="get">
+<input value="site:cwiki.apache.org/pivot site:incubator.apache.org/pivot" name="as_oq" type="hidden"/>
+<input value="Search the Site" size="25" name="q" id="query" type="text"/>
+<input name="Search" value="Search Site" type="submit"/>
 </form>
 </div>
-<table cellspacing="4" width="100%" border="0">
+<table border="0" width="100%" cellspacing="4">
 <!--HEADER SEPARATOR-->
 <tr>
 <td colspan="2">
-<hr size="1" noshade="" />
+<hr noshade="" size="1"/>
 </td>
 </tr>
 <tr>
 <!--LEFT SIDE NAVIGATION-->
-<td class="noPrint" nowrap="true" valign="top" width="20%">
+<td width="20%" valign="top" nowrap="true" class="noPrint">
 <p>
 <strong>Apache Pivot</strong>
 </p>
@@ -148,11 +148,11 @@
 </ul>
 </td>
 <!--RIGHT SIDE MAIN BODY-->
-<td id="mainBody" align="left" valign="top" width="80%">
-<table width="100%" cellpadding="2" cellspacing="0" border="0">
+<td width="80%" valign="top" align="left" id="mainBody">
+<table border="0" cellspacing="0" cellpadding="2" width="100%">
 <tr>
 <td bgcolor="#525D76">
-<font face="arial,helvetica,sanserif" color="#ffffff">
+<font color="#ffffff" face="arial,helvetica,sanserif">
 <a name="Apache Pivot">
 <strong>Apache Pivot</strong>
 </a>
@@ -172,8 +172,8 @@
       </p>
 
       <p>
-        <img src="./img/kitchen_sink.png" alt="Sample Pivot application" border="0" />
-        <br />
+        <img src="./img/kitchen_sink.png" alt="Sample Pivot application" border="0"/>
+        <br/>
         <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           <i>A sample Pivot application</i>
         </font>
@@ -210,16 +210,16 @@
 </tr>
 <tr>
 <td>
-<br />
+<br/>
 </td>
 </tr>
 </table>
-<table width="100%" cellpadding="2" cellspacing="0" border="0">
+<table border="0" cellspacing="0" cellpadding="2" width="100%">
 <tr>
 <td bgcolor="#525D76">
-<font face="arial,helvetica,sanserif" color="#ffffff">
-<a name="Incubation At Apache">
-<strong>Incubation At Apache</strong>
+<font color="#ffffff" face="arial,helvetica,sanserif">
+<a name="News">
+<strong>News</strong>
 </a>
 </font>
 </td>
@@ -228,32 +228,20 @@
 <td>
 <p>
 <blockquote>
-
       <p>
-        Apache Pivot is an effort undergoing incubation at The ASF, sponsored
-        by the Apache Incubator Project Management Committee (PMC).
+        <i>12/16/2009</i> Pivot has graduated! We are currently putting the finishing
+        touches on our new site design and forthcoming 1.4 release, and will soon be 
+        moving to our new home at <tt>http://pivot.apache.org/</tt>. Our mailing 
+        lists and Subversion repository will also be moving; check here for updates over
+        the next couple weeks.
       </p>
-
-      <p>
-        Incubation is required of all newly accepted projects until a further
-        review indicates that the infrastructure, communications, and decision
-        making process have stabilized in a manner consistent with other
-        successful ASF projects.
-      </p>
-
-      <p>
-        While incubation status is not necessarily a reflection of the
-        completeness or stability of the code, it does indicate that the project
-        has yet to be fully endorsed by the ASF.
-      </p>
-
     </blockquote>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<br />
+<br/>
 </td>
 </tr>
 </table>
@@ -262,14 +250,14 @@
 <!--FOOTER SEPARATOR-->
 <tr>
 <td colspan="2">
-<hr size="1" noshade="" />
+<hr noshade="" size="1"/>
 </td>
 </tr>
 <!--PAGE FOOTER-->
 <tr>
 <td colspan="2">
 <div align="center">
-<font size="-1" color="#525D76">
+<font color="#525D76" size="-1">
 <em>
               Copyright © 1999-2009, The Apache Software Foundation
             </em>
