Added Edvin Syse to the Who We Are Page and updated build instructions in README

--- a/deploy/who-we-are.html
+++ b/deploy/who-we-are.html
@@ -100,6 +100,11 @@ limitations under the License.
                     <em>(rwhitcomb at apache.org)</em>
                     <!--Your bio goes here-->
                 </li>
+                <li>
+                    <strong>Edvin Syse</strong>
+                    <em>(edvin at apache.org)</em>
+                    <!--Your bio goes here-->
+                </li>
             </ul>
         </div>
 
