--- a/deploy/who-we-are.html
+++ b/deploy/who-we-are.html
@@ -63,7 +63,7 @@ limitations under the License.
 
                 <li>
                     <strong>Martijn Dashorst</strong>
-                    <em>(martijnh at apache.org)</em>
+                    <em>(dashorst at apache.org)</em>
                 </li>
                 <!--Your bio goes here-->
 
