Added Chris Bartlett to Who We Are

--- a/deploy/who-we-are.html
+++ b/deploy/who-we-are.html
@@ -101,6 +101,11 @@ limitations under the License.
                     <!--Your bio goes here-->
                 </li>
                 <li>
+                    <strong>Chris Bartlett</strong>
+                    <em>(cbartlett at apache.org)</em>
+                    <!--Your bio goes here-->
+                </li>
+                <li>
                     <strong>Edvin Syse</strong>
                     <em>(edvin at apache.org)</em>
                     <!--Your bio goes here-->
