temporary fix for the large-data demo on the web site

--- a/deploy/demos/large-data.html
+++ b/deploy/demos/large-data.html
@@ -77,7 +77,7 @@ limitations under the License.
 
                 var startupProperties = [];
 
-                    startupProperties.push("basePath=<root></root>/assets");
+                    startupProperties.push("basePath=/demos/assets");
 
                 parameters.startup_properties = startupProperties.join("&");
 
