add links for Web Start execution in Featured Demos

--- a/deploy/demos/index.html
+++ b/deploy/demos/index.html
@@ -25,13 +25,19 @@ limitations under the License.
                     Note: all demos require <a href="http://www.java.com/">Java 6</a> or greater.
                 </em></p><h2>Featured Demos</h2><li><h2>"Kitchen Sink"</h2><div class="featuredDemosBox"><p class="featuredDemoImg"><a href="/demos/kitchen-sink.html" target="_new"><img src="/images/demos_feat_kitchen.jpg" alt="&quot;Kitchen Sink&quot;"></a></p><p class="featuredDemoDesc">
             Demonstrates a number of commonly used Pivot components.
-        </p><p class="featuredDemoView"><a href="/demos/kitchen-sink.html" target="_new">View</a></p></div></li><li><h2>Stock Tracker</h2><div class="featuredDemosBox"><p class="featuredDemoImg"><a href="/demos/stock-tracker.html"><img src="/images/demos_feat_stock.jpg" alt="Stock Tracker"></a></p><p class="featuredDemoDesc">
+        </p><p class="featuredDemoView"><a href="/demos/kitchen-sink.html" style="text-align:left;" target="_new">Applet</a>
+                                    -
+                                    <a href="/demos/kitchen-sink.jnlp" style="text-align:right;">Web Start</a></p></div></li><li><h2>Stock Tracker</h2><div class="featuredDemosBox"><p class="featuredDemoImg"><a href="/demos/stock-tracker.html"><img src="/images/demos_feat_stock.jpg" alt="Stock Tracker"></a></p><p class="featuredDemoDesc">
             An example of a simple but practical "real world" Pivot application. It monitors stock
             quotes provided by Yahoo! Finance.
-        </p><p class="featuredDemoView"><a href="/demos/stock-tracker.html">View</a></p></div></li><li style="margin-right:0;"><h2>iTunes Search</h2><div class="featuredDemosBox"><p class="featuredDemoImg"><a href="/demos/itunes-search.html"><img src="/images/demos_feat_itunes.jpg" alt="iTunes Search"></a></p><p class="featuredDemoDesc">
+        </p><p class="featuredDemoView"><a href="/demos/stock-tracker.html" style="text-align:left;">Applet</a>
+                                    -
+                                    <a href="/demos/stock-tracker.jnlp" style="text-align:right;">Web Start</a></p></div></li><li style="margin-right:0;"><h2>iTunes Search</h2><div class="featuredDemosBox"><p class="featuredDemoImg"><a href="/demos/itunes-search.html"><img src="/images/demos_feat_itunes.jpg" alt="iTunes Search"></a></p><p class="featuredDemoDesc">
             Simple application that allows a user to run search queries against the iTunes Music
             Store and presents the results in a table view.
-        </p><p class="featuredDemoView"><a href="/demos/itunes-search.html">View</a></p></div></li></ul><ul class="otherDemos"><br></ul><ul class="otherDemos"><h2>Other Demos</h2><li><strong>Component Explorer</strong><em>
+        </p><p class="featuredDemoView"><a href="/demos/itunes-search.html" style="text-align:left;">Applet</a>
+                                    -
+                                    <a href="/demos/itunes-search.jnlp" style="text-align:right;">Web Start</a></p></div></li></ul><ul class="otherDemos"><br></ul><ul class="otherDemos"><h2>Other Demos</h2><li><strong>Component Explorer</strong><em>
             Allows interaction with the properties and styles of the stock Pivot components.
         </em><div class="btnView"><a href="/demos/component-explorer.html" target="_new"><span>View</span></a></div></li><li><strong>BXML Explorer</strong><em>
             Does a Graphical preview of bxml files,
