shortening User Comments section

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -82,31 +82,16 @@ limitations under the License.
                         "</p>
                         <cite class="homeCol2">- Roger Whitcomb, Actian Corporation</cite>
                     </li>
-
+				<br/>
+                <h2>More User Comments</h2>
+                <ul>
                     <li>
-                        <p>"We chose Pivot due to how rapidly we were able to create a user interface
-                        and tie it into our existing API for our storage system. Pivot's straight-forward
-                        collection model saved us the hassle of writing mountains of boilerplate code to
-                        update the UI whenever low-level application state changed."</p>
-                        <cite class="homeCol2">- Mike Smorul, University of Maryland Institute for Advanced Computer Study</cite>
-                    </li>
-
-                    <li>
-                        <p>"I AM IMPRESSED. Web services, [data] binding, event handling, scripting in the UI
-                        definition (in any JVM language)...and yes, a good-looking mechanism for static
-                        localization. Keep going Apache Pivot - you are heading in the right direction!"</p>
-                        <cite class="homeCol2">- Christophe Hanlon, ADINS sprl</cite>
-                    </li>
-
-                    <li>
-                        <p>"From the perspective of someone who is fairly new to Pivot and writing a
-                        decent-sized standalone app with it, I can say that Pivot's API is about
-                        10,000 times cleaner than the other choices available for Java...If you need
-                        to give a Java app a nice UI with little fuss, I recommend Pivot wholeheartedly."</p>
-                        <cite class="homeCol2">- Clint Gilbert, Java developer</cite>
+                        <a href="http://cwiki.apache.org/confluence/display/PIVOT/User+Comments">
+                            <strong>Archive of User Comments</strong>
+                        </a>
+						<br/>
                     </li>
                 </ul>
-                <!-- <div class="btnDocs"><a href="user-comments.html"><span>More user comments</span></a></div> -->
             </div>
 
             <div class="homeCol3">
