--- a/deploy/index.html
+++ b/deploy/index.html
@@ -84,7 +84,7 @@ limitations under the License.
                     </li>
 				<br/>
                 <h2>More User Comments</h2>
-                <ul>
+                <ul class="newsItems">
                     <li>
                         <a href="http://cwiki.apache.org/confluence/display/PIVOT/User+Comments">
                             <strong>Archive of User Comments</strong>
