--- a/deploy/who-we-are.html
+++ b/deploy/who-we-are.html
@@ -64,12 +64,6 @@ limitations under the License.
                 </li>
 
                 <li>
-                    <strong>Martijn Dashorst</strong>
-                    <em>(dashorst at apache.org)</em>
-                </li>
-                <!--Your bio goes here-->
-
-                <li>
                     <strong>Noel Grandin</strong>
                     <em>(noelgrandin at apache.org)</em>
                 </li>
@@ -111,11 +105,15 @@ limitations under the License.
         </div>
 
 
-        <div class="section"><a name="Emeritus Committers"><h2>Emeritus Committers</h2></a>
+        <div class="section"><a name="Emeritus"><h2>Emeritus Members and Committers</h2></a>
             <ul class="committers">
                 <li>
                     <strong>Christopher Brind</strong>
                     <em>(brindy at apache.org)</em>
+                </li>
+                <li>
+                    <strong>Martijn Dashorst</strong>
+                    <em>(dashorst at apache.org)</em>
                 </li>
                 <li>
                     <strong>Niclas Hedhman</strong>
