updated links for svn folders

--- a/deploy/svn.html
+++ b/deploy/svn.html
@@ -50,6 +50,11 @@ limitations under the License.
                     <th>Contents</th>
                 </tr>
                 <tr>
+                    <td><a href="http://svn.apache.org/repos/asf/pivot/branches/">
+                    <tt>/branches/</tt></a></td>
+                    <td>Maintenance branches</td>
+                </tr>
+                <tr>
                     <td><a href="http://svn.apache.org/repos/asf/pivot/trunk/">
                     <tt>/trunk/</tt></a></td>
                     <td>The primary development branch</td>
@@ -59,25 +64,35 @@ limitations under the License.
                     <tt>/tags/</tt></a></td>
                     <td>Named snapshots</td>
                 </tr>
-                <tr>
-                    <td><a href="http://svn.apache.org/repos/asf/pivot/site/">
-                    <tt>/site/</tt></a></td>
-                    <td>The Apache Pivot website</td>
-                </tr>
+				<!--
                 <tr>
                     <td><a href="http://svn.apache.org/repos/asf/pivot/dist/">
                     <tt>/dist/</tt></a></td>
-                    <td>Files related to release distribution</td>
+					<td>
+					    Legacy place for Apache Pivot distibution files, the new URL is this:
+					    http://dist.apache.org/repos/dist/release/pivot/
+					</td>
                 </tr>
+				//-->
                 <tr>
                     <td><a href="http://svn.apache.org/repos/asf/pivot/infra/">
                     <tt>/infra/</tt></a></td>
                     <td>Project infrastructure files, such as shell scripts</td>
                 </tr>
                 <tr>
+                    <td><a href="http://svn.apache.org/repos/asf/pivot/jenkins/">
+                    <tt>/jenkins/</tt></a></td>
+                    <td>CI at Apache Jenkins</td>
+                </tr>
+                <tr>
                     <td><a href="http://svn.apache.org/repos/asf/pivot/project/">
                     <tt>/project/</tt></a></td>
                     <td>General project files</td>
+                </tr>
+                <tr>
+                    <td><a href="http://svn.apache.org/repos/asf/pivot/site/">
+                    <tt>/site/</tt></a></td>
+                    <td>The Apache Pivot website</td>
                 </tr>
                 <tr>
                     <td><a href="http://svn.apache.org/repos/asf/pivot/skunk/">
