--- a/deploy/index.html
+++ b/deploy/index.html
@@ -23,7 +23,7 @@ limitations under the License.
                 pageTracker._trackPageview();
                 } catch(err) {
 				}
-				</script></head><body><div id="wrapper"><div id="main"><div id="header"><div xmlns="" class="logoHome"><a href="/index.html"><img src="/images/logo.png" alt="Apache Pivot" title="Apache Pivot Homepage"></a></div><div class="tagline"><img src="/images/tagline.png" alt="Rich Internet Applications in Java" style="visibility:hidden"></div><ul class="navi"><li><a href="/demos/">Demos</a></li><li><a href="/download.cgi#2.0.2">Download</a></li><li><a href="/tutorials/">Tutorial</a></li><li><a href="/get-involved.html">Get Involved</a></li><li><a href="/about.html">About</a></li></ul></div>
+				</script></head><body><div id="wrapper"><div id="main"><div id="header"><div xmlns="" class="logoHome"><a href="/index.html"><img src="/images/logo.png" alt="Apache Pivot" title="Apache Pivot Homepage"></a></div><div class="logoASF"><a href="http://www.apache.org/"><img src="/images/asf_logo_wide_transp.png" alt="Apache" title="Apache Homepage"></a></div><div class="tagline"><img src="/images/tagline.png" alt="Rich Internet Applications in Java" style="visibility:hidden"></div><ul class="navi"><li><a href="/demos/">Demos</a></li><li><a href="/download.cgi#2.0.2">Download</a></li><li><a href="/tutorials/">Tutorial</a></li><li><a href="/get-involved.html">Get Involved</a></li><li><a href="/about.html">About</a></li></ul></div>
         <div id="stage">
             <p>
                 Apache Pivot&#153; is an open-source platform for building installable Internet
