remove ; after a sample block of code related to my_include.bxml (both in doc xml source files, and in generated html pages)

--- a/deploy/tutorials/bxml-primer.html
+++ b/deploy/tutorials/bxml-primer.html
@@ -164,7 +164,7 @@ limitations under the License.
 
         <pre class="brush:xml">
         
-        &lt;bxml:include src="my_include.bxml"/&gt;;
+        &lt;bxml:include src="my_include.bxml"/&gt;
         
         </pre>
 
