--- a/deploy/tutorials/spinners.html
+++ b/deploy/tutorials/spinners.html
@@ -115,10 +115,12 @@ limitations under the License.
                 xmlns:content="org.apache.pivot.wtk.content"
                 xmlns="org.apache.pivot.wtk"&gt;
                 &lt;BoxPane styles="{verticalAlignment:'center'}"&gt;
-                    &lt;Spinner spinnerData="['One', 'Two', 'Three', 'Four', 'Five']"
+					&lt;Spinner spinnerData="['One', 'Two', 'Three', 'Four', 'Five']"
                         circular="true" preferredWidth="80" selectedIndex="0"/&gt;
                     &lt;Spinner preferredWidth="40" selectedIndex="0"&gt;
-                        &lt;content:NumericSpinnerData lowerBound="0" upperBound="9" increment="1"/&gt;
+						&lt;spinnerData&gt;
+							&lt;content:NumericSpinnerData lowerBound="0" upperBound="9" increment="1"/&gt;
+						&lt;/spinnerData&gt;
                     &lt;/Spinner&gt;
                 &lt;/BoxPane&gt;
             &lt;/Window&gt;
