--- a/deploy/tests/hello-world-signed.html
+++ b/deploy/tests/hello-world-signed.html
@@ -76,11 +76,11 @@ limitations under the License.
 
 
             var libraries = [];
-            libraries.push("/lib/pivot-core-2.0.3.jar");
-            libraries.push("/lib/pivot-wtk-2.0.3.jar");
-            libraries.push("/lib/pivot-wtk-terra-2.0.3.jar");
-            libraries.push("/lib/pivot-tutorials-2.0.3.jar");
-            libraries.push("/lib/svgSalamander-tiny.jar");
+            libraries.push("/lib/pivot-core-2.0.3.signed.jar");
+            libraries.push("/lib/pivot-wtk-2.0.3.signed.jar");
+            libraries.push("/lib/pivot-wtk-terra-2.0.3.signed.jar");
+            libraries.push("/lib/pivot-tutorials-2.0.3.signed.jar");
+            libraries.push("/lib/svgSalamander-tiny.signed.jar");
 
 			attributes.archive = libraries.join(",");
 
