PIVOT-920, updating sample page (new, with name -unsigned, and copy a saved version of the old one with original name)

--- a/deploy/tests/hello-world-unsigned.html
+++ b/deploy/tests/hello-world-unsigned.html
@@ -96,6 +96,7 @@ limitations under the License.
 
 
 			parameters.java_arguments = javaArguments.join(" ");
+			parameters.permissions    = "sandbox";
 
 
             deployJava.runApplet(attributes, parameters, "1.6");
